# ChaosMagPy

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  CITATION  INSTALL.rst  INSTALLATION.rst  LICENSE  README.md  README.rst  build_package.sh  chaos_examples.py  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test_package.sh
.github/workflows/: ci.yml
chaosmagpy/: __init__.py  chaos.py  config_utils.py  coordinate_utils.py  data_utils.py  model_utils.py  plot_utils.py  rcsetup.py
chaosmagpy/lib/: frequency_spectrum_gsm.npz  frequency_spectrum_sm.npz
docs/: Makefile
docs/source/: conf.py  configuration.rst  index.rst  installation.rst  readme.rst  references.rst  usage.rst
docs/source/.static/examples/: CHAOS-6-x9.mat  CHAOS-7.mat  README.txt  plot_global_map.py  plot_global_polar.py  plot_spectrum.py  plot_stations.py
docs/source/.templates/: myclass.rst  myclass_autosummary.rst
notebooks/: spline_extrapolation.ipynb
tests/: helpers.py  test_chaos.py  test_chaosmagpy.py  test_coordinate_utils.py  test_data_utils.py  test_model_utils.py
