[metadata]
name = chaosmagpy
author = Clemens Kloss
author_email = ancklo@space.dtu.dk
version = attr: chaosmagpy.__version__
url = https://github.com/ancklo/ChaosMagPy
description = Evaluate the CHAOS geomagnetic field model.
long_description = file: README.rst, LICENSE, INSTALL.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
license = MIT
keywords =
    CHAOS
    geomagnetic field
    spherical harmonics model
    secular variation
    core field
    crustal field

classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    python>=3.6
    numpy>=1.15
    scipy>=1.1
    pandas>=0.23
    cython>=0.28
    cartopy>=0.16
    matplotlib<=2
    cdflib>=0.3
    docutils>=0.13
    pygments>=2.2

[options.package_data]
chaosmagpy =
    lib/Earth_conductivity.dat
    lib/frequency_spectrum_gsm.npz
    lib/frequency_spectrum_sm.npz
    lib/RC_1997-2018.dat

[options.packages.find]
exclude =
    build
    data
    dist
    tests
    docs
