[metadata]
name = chaosmagpy
author = Clemens Kloss
author_email = ancklo@space.dtu.dk
version = attr: chaosmagpy.__version__
url = https://github.com/ancklo/ChaosMagPy
description = Evaluate the CHAOS geomagnetic field model.
long_description = file: README.rst, CITATION, LICENSE, INSTALL.rst
long_description_content_type = text/x-rst
license = MIT
keywords =
    CHAOS
    geomagnetic field
    spherical harmonics model
    secular variation
    core field
    crustal field

classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    numpy
    scipy
    pandas
    Cython
    matplotlib>=3
    cdflib
    hdf5storage>=0.1.17
python_requires = >= 3.6

[options.package_data]
chaosmagpy =
    lib/Earth_conductivity.dat
    lib/frequency_spectrum_gsm.npz
    lib/frequency_spectrum_sm.npz
    lib/RC_index.h5

[options.packages.find]
exclude =
    build
    data
    dist
    notebooks
    tests
    docs
